test/spec_vectors/simd_boolean/fail/module_15.wat
(module (func $i16x8.all_true-arg-empty (result v128) (i16x8.all_true)))